--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
   "scripts": {
     "dev": "tsc-watch --noClear -p ./tsconfig.json --outDir ./dist --onSuccess \"node ./dist/server.js\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0"
+  },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
     "@types/express": "^4.17.14",
+    "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "tsc-watch": "^5.0.3",
