--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.8.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
