--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.8.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "pg-promise": "^11.3.0"
   },
@@ -21,6 +22,7 @@
     "@types/express": "^4.17.14",
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.8.4"
